--- a/frontend/logo.html
+++ b/frontend/logo.html
@@ -52,7 +52,7 @@
           <h1 id="clubName" class="text-4xl font-bold gradient-text mb-2"></h1>
           <p id="clubMeta" class="text-gray-400"></p>
         </div>
-        <a href="/admin.html" class="px-4 py-2 bg-accent-blue rounded-lg hover:bg-blue-600 transition-smooth">
+        <a id="editButton" href="/admin.html" class="px-4 py-2 bg-accent-blue rounded-lg hover:bg-blue-600 transition-smooth">
           ✏️ Upravit
         </a>
       </div>
