--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
         <a href="/" class="text-2xl font-bold gradient-text">🇨🇿 České Kluby Loga</a>
         <div class="flex gap-4">
           <a href="/" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">Domů</a>
+          <a href="/logos.html" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">Všechna Loga</a>
           <a href="/api-docs.html" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">API Docs</a>
           <a href="/admin.html" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">Admin</a>
         </div>
