--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs" class="dark">
+<html lang="cs" class="dark theme-dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +13,15 @@
     <div class="container mx-auto px-6 py-4">
       <div class="flex items-center justify-between">
         <a href="/" class="text-2xl font-bold gradient-text">České Kluby Loga</a>
-        <div class="flex gap-4">
-          <a href="/" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">Domů</a>
-          <a href="/api-docs.html" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">API Docs</a>
-          <a href="/admin.html" class="nav-link px-4 py-2 rounded-lg bg-accent-blue/20 transition-smooth">Admin</a>
+        <div class="flex items-center gap-3">
+          <div class="flex gap-4">
+            <a href="/" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">Domů</a>
+            <a href="/api-docs.html" class="nav-link px-4 py-2 rounded-lg hover:bg-dark-border transition-smooth">API Docs</a>
+            <a href="/admin.html" class="nav-link px-4 py-2 rounded-lg bg-accent-blue/20 transition-smooth">Admin</a>
+          </div>
+          <button id="themeToggle" type="button" class="px-3 py-1.5 text-xs md:text-sm rounded-full border border-dark-border bg-dark-bg/60 hover:bg-dark-border transition-smooth">
+            ☀️ <span class="hidden sm:inline">Světlý režim</span>
+          </button>
         </div>
       </div>
     </div>
@@ -36,14 +41,30 @@
     <section class="mb-12">
       <div class="bg-dark-card rounded-xl p-6 border border-dark-border">
         <h2 class="text-2xl font-bold mb-6">🔍 Vyhledat Klub</h2>
-        
-        <div class="relative mb-6">
-          <input 
-            type="text" 
-            id="clubSearch" 
-            placeholder="Hledat české kluby (např. Sparta, Slavia)..."
-            class="w-full bg-dark-bg border border-dark-border rounded-lg px-4 py-3 text-white focus:outline-none focus:border-accent-blue transition-smooth"
-          >
+        <div class="flex flex-col gap-3 md:flex-row md:items-center md:justify-between mb-4">
+          <div class="w-full md:max-w-lg">
+            <div class="relative">
+              <span class="pointer-events-none absolute inset-y-0 left-3 flex items-center text-gray-500">
+                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15z" />
+                </svg>
+              </span>
+              <input 
+                type="text" 
+                id="clubSearch" 
+                placeholder="Hledat české kluby (např. Sparta, Slavia)..."
+                class="w-full bg-dark-bg border border-dark-border rounded-lg pl-10 pr-4 py-3 text-white focus:outline-none focus:border-accent-blue transition-smooth"
+              >
+            </div>
+          </div>
+          <div class="flex flex-col items-start md:items-end gap-1 text-xs">
+            <div class="inline-flex rounded-full bg-dark-bg border border-dark-border p-1">
+              <button type="button" data-club-sport-filter="all" class="px-3 py-1.5 rounded-full bg-accent-blue text-white transition-smooth">Vše</button>
+              <button type="button" data-club-sport-filter="football" class="px-3 py-1.5 rounded-full bg-dark-bg text-gray-300 hover:bg-dark-border transition-smooth">Fotbal</button>
+              <button type="button" data-club-sport-filter="futsal" class="px-3 py-1.5 rounded-full bg-dark-bg text-gray-300 hover:bg-dark-border transition-smooth">Futsal</button>
+            </div>
+            <span class="text-[11px] text-gray-500">Výsledky z FAČR • filtr dle druhu sportu</span>
+          </div>
         </div>
 
         <!-- Search Results -->
@@ -57,6 +78,21 @@
     <section id="uploadSection" class="hidden">
       <div class="bg-dark-card rounded-xl p-6 border border-dark-border">
         <h2 class="text-2xl font-bold mb-6"><span style="font-size: 30px; display: inline-block; vertical-align: middle; line-height: 1;">⬆️</span> Nahrát Logo</h2>
+        <div id="selectedClubSummary" class="hidden mb-6">
+          <div class="bg-dark-bg rounded-lg border border-dark-border p-4 flex items-start gap-4">
+            <div id="selectedClubLogo" class="flex-shrink-0 w-14 h-14 rounded-lg bg-dark-border/40 flex items-center justify-center text-2xl">
+              🏟️
+            </div>
+            <div class="flex-1 min-w-0">
+              <div class="flex items-center gap-2 mb-1">
+                <h3 id="selectedClubName" class="font-semibold truncate"></h3>
+                <span id="selectedClubType" class="px-2 py-0.5 rounded-full bg-accent-blue/10 text-xs text-accent-blue uppercase tracking-wide"></span>
+              </div>
+              <p id="selectedClubCity" class="text-xs text-gray-400 truncate"></p>
+              <p id="selectedClubWebsite" class="text-xs text-accent-blue mt-1 truncate"></p>
+            </div>
+          </div>
+        </div>
         <form id="uploadForm" class="space-y-6">
           
           <!-- Club UUID (Read-only) -->
